--- a/.travis.yml
+++ b/.travis.yml
@@ -8,6 +8,6 @@ before_install:
 install:
     - composer install --prefer-dist --no-interaction $COMPOSER_FLAGS
 script:
-    - phpunit --configuration phpunit.xml --coverage-text --exclude-group incomplete
+    - phpunit --configuration phpunit.xml.dist --coverage-text --exclude-group incomplete
 notifications:
     email: 'snebes+travis@gmail.com'
