--- a/composer.json
+++ b/composer.json
@@ -19,9 +19,11 @@
         }
     },
     "license": "MIT",
+    "require": {
+        "php": "^7.1",
+        "ext-mbstring": "*"
+    },
     "require-dev": {
         "phpunit/phpunit": "^7.5"
-    },
-    "require": {
     }
 }
