--- a/.scrutinizer.yml
+++ b/.scrutinizer.yml
@@ -11,4 +11,4 @@ tools:
     php_mess_detector: true
     sensiolabs_security_checker: true
     external_code_coverage:
-        timeout: '3600'
+        timeout: 600
