--- a/.scrutinizer.yml
+++ b/.scrutinizer.yml
@@ -2,13 +2,24 @@ imports:
     - php
 
 filter:
-    paths: [src/*]
-
+    excluded_paths:
+        - 'tests/*'
+checks:
+    php: true
+build:
+    environment:
+        php:
+            version: 7.2
+    tests:
+        override:
+            -
+                command: vendor/bin/phpunit --coverage-clover=clover.xml
+                coverage:
+                    file: clover.xml
+                    format: php-clover
 tools:
     php_cs_fixer:
         config: { level: psr2 }
     php_hhvm: true
     php_mess_detector: true
     sensiolabs_security_checker: true
-    external_code_coverage:
-        timeout: 600
