--- a/composer.json
+++ b/composer.json
@@ -24,6 +24,7 @@
         "ext-mbstring": "*"
     },
     "require-dev": {
-        "phpunit/phpunit": "^7.5"
+        "phpunit/phpunit": "^7.5",
+        "phpstan/phpstan": "^0.11.1"
     }
 }
